--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+* {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+      text-align: center;
+      font-family: "Satoshi", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.rotation {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 50;
+      font-family: "Satoshi", sans-serif;
+      background-color: #c7d6ce;
+      display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rotation p {
+      width: 80%;
+      font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (min-width: 600px) and (max-width: 915px) and (orientation: landscape) {
+      .rotation {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+      }
 }
